---
source: src/reg_compiler/tests.rs
expression: bytecode
---
0 ; script
1 [   1]  Push           L17:  
2 [   1]  LoadImediate   r6[fn([nil], 0)] (local *3)  
3 ; imediate killed 7 for global *0
4 [   1]  MemCpy         (global *0)  r6[fn([nil], 0)] (1u)  
5 [   1]  Pop            
6 ; imediate killed 8 for global *0
7 [   0]  Move           r9[&fn([nil], 0)] (global *0)  
8 [   0]  Move           r10[fn([nil], 0)] r9[&fn([nil], 0)] 
9 [   0]  PreCall        r11[nil] r10[fn([nil], 0)] (0u)  
10 [   0]  Call           
11 [   0]  Halt           
12 ; anon0
13 [   1]  LoadImediate   r1[i64] (local *3)  
14 [   1]  Move           r2[&i64] r1[i64] 
15 [   1]  Load           r3[i64] r2[&i64] 
16 [   1]  Return         r3[i64] (0u)  
17 ; main
18 [   1]  Push           L12:  
19 [   1]  LoadImediate   r4[fn([i64, i64], 0)] (local *3)  
20 [   1]  Push           r0[nil] 
21 [   1]  LoadImediate   r5[*fn([i64, i64], 0)] (local *3)  
22 [   1]  MemCpy         r5[*fn([i64, i64], 0)] r4[fn([i64, i64], 0)] (1u)  
23 [   1]  Return         r0[nil] (0u)
